Aggiunte View di contenuto e una di Layout

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,6 +2,8 @@
     Layout="_Layout"; //indico il layout condiviso tra le view per non replicare codice
 
 }
-<p>sono la view dell'action detail dell'esercizio1 controller</p>
+
+ <p>sono la view dell'action index dell'home controller</p>
+  
 
 
