--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -5,19 +5,39 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Esercizio ApuliaSoft</title>
-        
+          <!--
+aggiungo foglio di stile per visualizzazione tabella (altrimenti senza bordi)
+-->
+        <style type="text/css">
+       table {
+    border-collapse:collapse;
+}
+
+table td {
+   border:1px solid #000;
+}
+    </style>
+        <!--
+aggiungo la referenziazione al css fornito da bootstrap per una grafica migliore e ottimizzata
+-->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         
     </head>
     <body>
-        <h1>HOME</h1>
+        
         <header>
             <nav>
                 <ul>
-                    <li>Pagina 1</li>
-                    <li>Pagina 2</li>
+                   <!-- 
+                       questo tag helper genererà la riga html <a href="/esercizio1/Detail/1">Group by 1</a>
+                       se ci sarà bisogno di cambiare mappa di routing si potrà modificare il tag helper
+
+                       <li> <a asp-action="Detail" asp-controller="esercizio1" asp-route-id="1"> Group by 1</a></li>   asp-route-id="1" imposta un -->
+                   <li> <a asp-action="Index" asp-controller="Home"> Lista completa</a></li>
+                    <li> <a asp-action="Detail" asp-controller="esercizio1"> Group By 1</a></li>
                     <li>Pagina 3</li>
                     <li>Pagina 4</li>
-                    <li>Pagina 5</li>
+              
                 </ul>
             </nav>
         </header>
@@ -25,6 +45,8 @@
  @RenderBody()
     </body>
     <footer>Colloquio ApuliaSoft</footer>
+    <!-- inserisco alla fine script in modo da far caricare prima la grafica in caso di connessione lenta-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </html>
 
 
