--- a/Views/esercizio1/Index.cshtml
+++ b/Views/esercizio1/Index.cshtml
@@ -1,7 +1,12 @@
+
+@using System.Collections.Generic
+@using Esercizio1.Models.ViewModels
+@model List<Esercizio1ViewModel>
 @{
     Layout="_Layout"; //indico il layout condiviso tra le view per non replicare codice
 
 }
+
 <p>sono la view dell'action index dell'esercizio1 controller</p>
 
 
