--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -34,7 +34,7 @@ aggiungo la referenziazione al css fornito da bootstrap per una grafica migliore
 
                        <li> <a asp-action="Detail" asp-controller="esercizio1" asp-route-id="1"> Group by 1</a></li>   asp-route-id="1" imposta un -->
                    <li> <a asp-action="Index" asp-controller="Home"> Lista completa</a></li>
-                    <li> <a asp-action="Detail" asp-controller="esercizio1"> Group By 1</a></li>
+                    <li> <a asp-action="Detail" asp-controller="esercizio1"> Group By Project</a></li>
                     <li>Pagina 3</li>
                     <li>Pagina 4</li>
               
