--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -35,8 +35,8 @@ aggiungo la referenziazione al css fornito da bootstrap per una grafica migliore
                        <li> <a asp-action="Detail" asp-controller="esercizio1" asp-route-id="1"> Group by 1</a></li>   asp-route-id="1" imposta un -->
                    <li> <a asp-action="Index" asp-controller="Home"> Lista completa</a></li>
                     <li> <a asp-action="Detail" asp-controller="esercizio1"> Group By Project</a></li>
-                    <li>Pagina 3</li>
-                    <li>Pagina 4</li>
+                    <li> <a asp-action="Detail1" asp-controller="esercizio1"> Group By Project - Employee</a></li>
+                    <li><a asp-action="Detail2" asp-controller="esercizio1"> Group By  Employee - Project</a></li>
               
                 </ul>
             </nav>
