--- a/Views/esercizio1/Detail2.cshtml
+++ b/Views/esercizio1/Detail2.cshtml
@@ -2,7 +2,7 @@
 @using System.Collections.Generic
 @using Esercizio1.Models.ViewModels
 @model List<Esercizio1ViewModel>
-<h1>GROUP BY PROJECT - EMPLOYEE</h1>
+<h1>GROUP BY EMPLOYEE - PROJECT</h1>
 @{
     Layout="_Layout"; //indico il layout condiviso tra le view per non replicare codice
 
